[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yabtc"
version = "1.2.0"
authors = [
  { name="Mohanson", email="mohanson@outlook.com" },
]
description = "Yabtc: bitcoin library for humans"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["requests"]

[project.urls]
homepage = "https://github.com/mohanson/yabtc"
