[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pabtc"
version = "1.2.2"
authors = [
  { name="Mohanson", email="mohanson@outlook.com" },
]
description = "Plbtc: bitcoin library for humans"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["requests"]

[project.urls]
homepage = "https://github.com/mohanson/pabtc"
